[package]
name = "transactions-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
rust_decimal = "1.36.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
log = "0.4.22"
